prepare for deploy

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Montes Vergara</title>
+  <title>MountainSoft</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="desarrollo,ingenieria,creacion de paginas web" name="keywords">
   <meta content="montes vergara desarrollo e ingenieria" name="description">
@@ -60,8 +60,8 @@
   <div id="headerwrap">
 
     <div class="info-brand">
-      <h1 class="brand-montes">Montes Vergara</h1>
-      <h2 class="brand-montes">Desarrollo e Ingeniería</h2>
+      <h1 class="brand-montes">MountainSoft</h1>
+      <h2 class="brand-montes">engineering & development</h2>
       <i class="fa fa-angle-down"></i>
     </div>
 
